docs(style): improve search position

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -32,3 +32,10 @@ table {
 .example-props {
   flex-basis: 32em;
 }
+
+@media (min-width: 960px) {
+  .VPNavBarSearch {
+    position: absolute;
+    left: 32px;
+  }
+}
